--- a/src/index.html
+++ b/src/index.html
@@ -112,16 +112,14 @@
       </div>
     </section>
   
-    <section id="page-app" class="container color-white">
+    <section id="page-app" class="container color-white fs-16">
       <h2>МОБИЛЬНОЕ ПРИЛОЖЕНИЕ</h2>
       <div class="content-container">
         <div class="text">
-          <p class="fs-16">
-            Воспользуйтесь нашим мобильным приложением. Оно позволит слушать музыку с любого устройства на базе операционных систем Androind и iOS
-            <br><br>
-            С тарифом «Премиум» приложение позволяет скачивать все композиции из нашей коллекции. Вы можете слушать музыку даже без интернета.
-          </p>
-          <button class="btn bg-red fs-12-8">Скачать</button>
+          <p>Воспользуйтесь нашим мобильным приложением. Оно позволит слушать музыку с любого устройства на базе операционных систем Androind и iOS</p>
+          <br>
+          <p>С тарифом «Премиум» приложение позволяет скачивать все композиции из нашей коллекции. Вы можете слушать музыку даже без интернета.</p>
+          <a class="btn bg-red fs-12-8">Скачать</a>
         </div>
         <img src="images/iphone.png" alt="IPhone"/>
       </div>
