--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
     </section>
   
     <section id="page-app" class="container color-white fs-16">
-      <h2>МОБИЛЬНОЕ ПРИЛОЖЕНИЕ</h2>
+      <h2 class="text-center w-100">МОБИЛЬНОЕ ПРИЛОЖЕНИЕ</h2>
       <div class="content-container">
         <div class="text">
           <p>Воспользуйтесь нашим мобильным приложением. Оно позволит слушать музыку с любого устройства на базе операционных систем Androind и iOS</p>
