--- a/src/index.html
+++ b/src/index.html
@@ -115,9 +115,8 @@
     <section id="page-app" class="container color-white fs-16">
       <h2 class="text-center w-100">МОБИЛЬНОЕ ПРИЛОЖЕНИЕ</h2>
       <div class="content-container">
-        <div class="text">
+        <div>
           <p>Воспользуйтесь нашим мобильным приложением. Оно позволит слушать музыку с любого устройства на базе операционных систем Androind и iOS</p>
-          <br>
           <p>С тарифом «Премиум» приложение позволяет скачивать все композиции из нашей коллекции. Вы можете слушать музыку даже без интернета.</p>
           <a class="btn bg-red fs-12-8">Скачать</a>
         </div>
