--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
               <p class="color-orange fs-12">MUSIC BOX</p>
               <p class="color-dark-gray fs-12">17/01/2020</p>
             </div>
-            <button class="btn fs-12 bg-transparent color-dark-gray">К АЛЬБОМУ</button>
+            <a class="btn fs-12 bg-transparent color-dark-gray">К АЛЬБОМУ</a>
           </div>
         </div>
 
@@ -106,7 +106,7 @@
               <p class="color-orange fs-12-8">MUSIC BOX</p>
               <p class="color-dark-gray fs-12-8">24/02/2020</p>
             </div>
-            <button class="btn fs-12-8 bg-transparent color-dark-gray">К АЛЬБОМУ</button>
+            <a class="btn fs-12-8 bg-transparent color-dark-gray">К АЛЬБОМУ</a>
           </div>
         </div>
       </div>
